# pytorch

./: .gitmodules  CMakeLists.txt  gemm4k.cu  setup.py
DO_NOT_MERGE/: gemm_hierarchical_tiling.cu  gemm_hierarchical_tiling_cyclic.cu  gemm_hierarchical_tiling_cyclic_unroll.cu  gemm_hierarchical_tiling_cyclic_unswitch.cu
aten/src/ATen/core/: NamedRegistrations.cpp  aten_interned_strings.h  interned_strings.h
aten/src/ATen/native/: Dropout.cpp  layer_norm.cpp  native_functions.yaml
benchmarks/cpp/nvfuser/: CMakeLists.txt  batch_norm.cpp  bert.cpp  layer_norm.cpp  lstm_cell.cpp  normalization.cpp  operators.h  reduction.cpp  softmax.cpp  transpose.cpp
c10/: CMakeLists.txt
c10/telemetry/: core.cpp  heap_debug.cpp  telemetry.h
caffe2/: CMakeLists.txt
cmake/: Dependencies.cmake  Summary.cmake
test/: test_jit.py  test_jit_autocast.py  test_jit_cuda_fuser.py
test/cpp/jit/: test_gpu.cpp  test_gpu_validator.h  tests.h
test/cuda_fuser_benchmark/: benchmark.py  nvtx_parser.py
tools/: build_variables.bzl
tools/autograd/: derivatives.yaml
torch/csrc/autograd/: FunctionsManual.cpp  FunctionsManual.h
torch/csrc/jit/api/: function_impl.h
torch/csrc/jit/ir/: alias_analysis.cpp  ir.cpp
torch/csrc/jit/passes/: common_subexpression_elimination.cpp  graph_fuser.cpp  peephole.cpp  specialize_autogradzero.cpp
torch/csrc/jit/runtime/: autodiff.cpp  graph_executor.cpp  interpreter.cpp  operator.cpp  profiling_graph_executor_impl.cpp  profiling_record.h  register_prim_ops_fulljit.cpp  (+1 more)
torch/jit/: _fuser.py
torch/testing/_internal/: jit_utils.py
(+183 files in other folders)
